--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato: 100,300,400,700|Luckiest+Guy|Oxygen:300,400" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+    <title>Nicks Boat Work</title>
 </head>
 <body>
     <header>
-        
+        <ul class="navigation">
+            <li><img src="https://content.codecademy.com/courses/web-101/unit-9/htmlcss1-img_logo-shiptoit.png" height="20px;"></li>
+            <li class="active">Action List</li>
+            <li>Profiles</li>
+            <li>Settings</li>
+          </ul>
     </header>
     
 </body>
