--- a/indexbackup.html
+++ b/indexbackup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato: 100,300,400,700|Luckiest+Guy|Oxygen:300,400" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="stylesbackup.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
