--- a/index.html
+++ b/index.html
@@ -3,27 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lato: 100,300,400,700|Luckiest+Guy|Oxygen:300,400" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="resources/style.css" rel="stylesheet">
+    <title>Nicks Boat Work</title>
 </head>
-<body>
-    <header>
-        <div class="image-container logo-small">
-          <img src="images/logosmall.png" id="logo-small">
-        </div>
-        <div class="image-container logo-big">
-          <img src="https://content.codecademy.com/courses/freelance-1/unit-6/logo-lg.png">
-        </div>
-        <nav>
-            <ul>
-                <li><a>Repair</a></li>
-                <li><a>Restore</a></li>
-                <li><a>Paint</a></li>
-                <li><a>Detail</a></li>
-                <li><a>Contact</a></li>
-            </ul>
+<div class="flex-430px">
+    <body>
+        <nav class="navbar">
+            <div class="container nav-container">
+                <img src="resources/images/logo.png" alt="maryland boat repair logo" id="logo">
+                <div id="nav-link-container">
+                    <ul>
+                        <li><a href="#" class="nav-link">Repairs</a></li>
+                        <li><a href="#" class="nav-link">Mobile Service</a></li>
+                        <li><a href="#" class="nav-link">Boat Shop</a></li>
+                        <li><a href="#" class="nav-link">Portfolio</a></li>
+                        <li><a href="#" class="nav-link">Boat detailing</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-      </header>
-</body>
+        <header>
+            <div class="container bannerimg">
+                <img src="images/burgerback.jpg" alt="burgerboat" id="bannerboat">
+                <div class="container bannertext">
+                    <h2>No Compromises</h2>
+                    <h2>Just Perfection</h2>
+                    <br>
+                    <h4>Invisible repairs</h4>
+                    <h4>Gauranteed</h4>
+                </div>
+            </div>
+            <div class="video-container">
+                <video autoplay loop muted id="video-bg">
+                  <source src="resources/videos/tubing.mp4" type="video/mp4">
+                </video>
+            </div>
+        </header>
+        <div class="break">
+            <img src="images/burgerback.jpg">
+        </div>
+        
+
+        
+
+
+
+
+
+    </body>
+</div>
 </html>
