--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="resources/style.css" rel="stylesheet">
     <title>Nicks Boat Work</title>
 </head>
-<div class="flex-430px">
     <body>
         <nav class="navbar">
             <div class="container nav-container">
@@ -25,7 +24,6 @@
         </nav>
         <header>
             <div class="container bannerimg">
-                <img src="images/burgerback.jpg" alt="burgerboat" id="bannerboat">
                 <div class="container bannertext">
                     <h2>No Compromises</h2>
                     <h2>Just Perfection</h2>
@@ -41,16 +39,9 @@
             </div>
         </header>
         <div class="break">
-            <img src="images/burgerback.jpg">
+            <p>Hi there</p>
+            <img src="/images/family.jpg">
         </div>
-        
-
-        
-
-
-
-
 
     </body>
-</div>
 </html>
