--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         <header>
             <div class="container bannerimg">
                 <div class="container bannertext">
-                    <h2>No Compromises</h2>
-                    <h2>Just Perfection</h2>
+                    <h2>High Quality</h2>
+                    <h2>Expert Service</h2>
                     <br>
-                    <h4>Invisible repairs</h4>
-                    <h4>Gauranteed</h4>
+                    <h4>No boatyard gimmics</h4>
+                    <h4>No employee turnover</h4>
+                    <h4>No overhead costs</h4>
+                    <h4>Just Real. Quaility. Service.</h4>
                 </div>
             </div>
             <div class="video-container">
@@ -40,7 +42,7 @@
         </header>
         <div class="break">
             <p>Hi there</p>
-            <img src="/images/family.jpg">
+            <img src="/resources/images/family.jpg" alt="the">
         </div>
 
     </body>
