--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
                   <source src="resources/videos/tubing.mp4" type="video/mp4">
                 </video>
             </div>
+            <button type="button" id="call">
+                <a href="tel:4433653215">Call us</a>
+            </button>
         </header>
+
         <div class="break">
             <p>Hi there</p>
             <img src="/resources/images/family.jpg" alt="the">
