--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <header>
             <div class="container bannerimg">
-                <div class="container bannertext">
+                <div class="bannertext">
                     <h2>High Quality</h2>
                     <h2>Expert Service</h2>
                     <br>
@@ -44,10 +44,10 @@
             </button>
         </header>
 
-        <div class="break">
+        <!--<div class="break">
             <p>Hi there</p>
             <img src="/resources/images/family.jpg" alt="the">
-        </div>
+        </div>-->
 
     </body>
 </html>
