--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
                 <img src="resources/images/logo.png" alt="maryland boat repair logo" id="logo">
                 <div id="nav-link-container">
                     <ul>
-                        <li><a href="#" class="nav-link">Repairs</a></li>
-                        <li><a href="#" class="nav-link">Mobile Service</a></li>
-                        <li><a href="#" class="nav-link">Boat Shop</a></li>
-                        <li><a href="#" class="nav-link">Portfolio</a></li>
-                        <li><a href="#" class="nav-link">Boat detailing</a></li>
+                        <li><a href="#" class="nav-link">Boat Repair</a></li>
+                        <li><a href="#" class="nav-link">Painting</a></li>
+                        <li><a href="#" class="nav-link">Fiberglass</a></li>
+                        <li><a href="#" class="nav-link">Gelcoat</a></li>
+                        <li><a href="#" class="nav-link">Inspections</a></li>
                     </ul>
                 </div>
             </div>
@@ -25,13 +25,15 @@
         <header>
             <div class="container bannerimg">
                 <div class="bannertext">
-                    <h2>High Quality</h2>
+                    <h2>Just Quality</h2>
                     <h2>Expert Service</h2>
                     <br>
-                    <h4>No boatyard gimmics</h4>
-                    <h4>No employee turnover</h4>
-                    <h4>No overhead costs</h4>
-                    <h4>Just Real. Quaility. Service.</h4>
+                    <div class="bannertext2">
+                        <h4>No Storage Fees.</h4>
+                        <h4>No Parts Markups.</h4>
+                        <h4>No Overhead Costs.</h4>
+                        <h4>Just Expert Service for $55/h.</h4>
+                    </div>
                 </div>
             </div>
             <div class="video-container">
@@ -40,7 +42,7 @@
                 </video>
             </div>
             <button type="button" id="call">
-                <a href="tel:4433653215">Call us</a>
+                <a href="tel:4433653215">Call me!</a>
             </button>
         </header>
 
