--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <nav class="navbar">
             <div class="container nav-container">
-                <img src="resources/images/logo.png" alt="maryland boat repair logo" id="logo">
+                <img src="resources/images/Nicks Boat Work Logo noback.png" alt="maryland boat repair logo" id="logo">
                 <div id="nav-link-container">
                     <ul>
                         <li><a href="#" class="nav-link">Boat Repair</a></li>
