--- a/index.html
+++ b/index.html
@@ -45,11 +45,25 @@
                 <a href="tel:4433653215">Call me!</a>
             </button>
         </header>
-
-        <!--<div class="break">
-            <p>Hi there</p>
-            <img src="/resources/images/family.jpg" alt="the">
-        </div>-->
+        <main>
+        <section class="container section">
+            <figure class="figure">
+                    <img src="resources/images/front/Boat Repair Maryland.jpg" alt="Boat Repair in Maryland" id="boatrepairimg" class="shadow">
+            </figure>
+            <article class="article">
+                <h5>About</h5>
+                <h3>Boat Repair in Maryland</h3>
+                <p>Boat repair stuff in Maryland. More boat repair stuff in maryland</p>
+                <button type="button">
+                    <a href="tel:4433653215">Call me!</a>
+                </button>
+            </article>
+        </section>
+        <section class="container painting">
+            <h2>placeholder</h2>
+        </section>
+        </main>
+        
 
     </body>
 </html>
