--- a/boatrepair.html
+++ b/boatrepair.html
@@ -25,8 +25,8 @@
         <header>
             <div class="container bannerimg">
                 <div class="bannertext">
-                    <h2>Just Expert</h2>
-                    <h2>Service</h2>
+                    <h2>Just Quality</h2>
+                    <h2>Expert Service</h2>
                     <br>
                     <div class="bannertext2">
                         <h4>No Storage Fees.</h4>
@@ -46,38 +46,10 @@
             </button>
         </header>
         <main>
-            <section class="container section">
-                <figure class="figureleft">
-                        <img src="resources/images/front/Boat Repair Maryland.jpg" alt="Boat Repair in Maryland" id="boatrepairimg" class="shadow">
-                </figure>
-                <article class="articleright">
-                    <h5>About</h5>
-                    <h3>Boat Repairs</h3>
-                    <p>Since 2001 Nicks Boat Work has provided boat repair services in Maryland around Annapolis and Kent Island.
-                        Over the years, I've perfected the repair process to the point of being able to perform the highest of quality repairs, from start to finish, in just 1 day. 
-                        Check out my repair portfolio!</p>
-                    <button type="button" class="button2">
-                        <a href="boatrepair.html">How to Repair a Boat</a>
-                    </button>
-                </article>
-            </section>
-            <br>
-            <br>
-            <section class="container section fig2nd">
-                <article class="articleleft">
-                    <h5>About</h5>
-                    <h3>Boat Painting</h3>
-                    <p>Since 2001 Nicks Boat Work has provided boat painting services in Maryland near Annapolis and Kent Island.
-                        The boat painting process is a science and an art. Consult Maryland's premeire boat painter for help with your boat painting project. 
-                        Check out my gallery of boat painting projects!</p>
-                    <button type="button" class="button2">
-                        <a href="boatrepair.html">How to Paint a Boat</a>
-                    </button>
-                </article>
-                <figure class="figureright">
-                    <img src="resources/images/front/Maryland Boat Painting.png" alt="Boat Repair in Maryland" id="boatrepairimg" class="shadow">
-                </figure>
-            </section>
+       
+        <section class="container painting">
+            <h2>placeholder</h2>
+        </section>
         </main>
         
 
