--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
                     <h3>Gelcoat Repair</h3>
                     <p>Nicks Boat Work provides gelcoat repair services in Maryland around Annapolis, Easton, and Kent Island.
                         Nicks Boat Work has performed gelcoat repairs on boats, pools, and hottubs. With over 20 years of experience dealing with the 
-                        top gelcoat maufacturers in the country, Nick can find or produce the custom gelcoat color for your repair need.
-                        Check out my fiberglass repair porfolio!</p>
+                        top gelcoat maufacturers in the country, Nick can find or produce the custom gelcoat color for your repair need.</p>
                     <button type="button" class="button2">
                         <a href="gelcoatrepair.html">How to Repair Gelcoat</a>
                     </button>
@@ -114,7 +113,7 @@
             </section>
 
             <section class="container section">
-                <figure class="figureleft">
+                <figure class="figureright">
                         <img src="resources/images/front/Brightwork in Maryland.png" alt="Boat Repair in Maryland" class="pictall shadow">
                 </figure>
                 <article class="articleright">
@@ -125,7 +124,7 @@
                         top gelcoat maufacturers in the country, Nick can find or produce the custom gelcoat color for your repair need.
                         Check out my fiberglass repair porfolio!</p>
                     <button type="button" class="button2">
-                        <a href="brightwork.html">How to Repair Gelcoat</a>
+                        <a href="brightwork.html">More About Brightwork</a>
                     </button>
                 </article>
             </section>
@@ -134,16 +133,17 @@
                 <article class="articleleft">
                     <h5>About</h5>
                     <h3>Consulting</h3>
-                    <p>Nicks Boat Work provides gelcoat repair services in Maryland around Annapolis, Easton, and Kent Island.
-                        Nicks Boat Work has performed gelcoat repairs on boats, pools, and hottubs. With over 20 years of experience dealing with the 
-                        top gelcoat maufacturers in the country, Nick can find or produce the custom gelcoat color for your repair need.
-                        Check out my fiberglass repair porfolio!</p>
+                    <p>Nick provides marine, boatyard, and boat repair consulting services around Annapolis, Easton, and Kent Island.
+                        If you ask 10 fiberglass repair technicians how to perform a repair, you'll get 9 different answers.
+                        This is because there are many different paths one can take to perform a boat repair.
+                        Schedule a consultation today to learn how to perform your DIY repair or restoration with success!
+                        More About Consultations</p>
                     <button type="button" class="button2">
-                        <a href="brightwork.html">How to Repair Gelcoat</a>
+                        <a href="brightwork.html">More About Consultations</a>
                     </button>
                 </article>
                 <figure class="figureright">
-                        <img src="resources/images/front/Boat COnsultant in Maryland.png" alt="Boat Repair in Maryland" class="pictall">
+                        <img src="resources/images/front/Boat Consultant in Maryland.png" alt="Boat Repair in Maryland" class="pictall">
                 </figure>
             </section>
 
