--- a/boatrepair.html
+++ b/boatrepair.html
@@ -42,14 +42,18 @@
         </nav>
 
         <header>
-            <div class="container bannerimg">
-                <div class="bannertextpage">
+            <div class="bannerimg "></div>
+            </div class="container toppage">
+                <div class="bannerpage">
                     <h1>Maryland Boat Repair Shop</h1>
                     <h2>Where's the repair?</h2>
-                    <div class="bannertext2">
+                    <div>
                         <br>
                         <h4 class="middle">Performing invisible repairs since 2001</h4>
                     </div>
+                </div>
+                <div>
+                  <img src="resources/images/boatrepair/gunwhale/fiberglass-repair-4.jpg" alt="Maryland boat repair shop" class="topimg">
                 </div>
             </div>
             <button type="button" id="call">
