--- a/boatrepair.html
+++ b/boatrepair.html
@@ -64,7 +64,7 @@
         
 
           <main>
-            <section>
+            <section class="pagesection">
               <div class="carousel">
                   <h2>Carousel Example</h2>  
                   <div id="myCarousel" class="carousel slide" data-ride="carousel">
