--- a/boatrepair.html
+++ b/boatrepair.html
@@ -104,12 +104,22 @@
                 </figure>  
                 </div>
                 <article>
-                  
+                  <h4>How to perform a perfect repair:</h4>
+                  <div class="ol">
+                    <ol>
+                        <li>Acquiring necessary equipment and supplies.</li>
+                        <li>Removing damaged, flaking, or deteriorated parts of the vessel.</li>
+                        <li>Removing protective coating around the repair area.</li>
+                        <li>Rebuilding damaged area with appropriate fiberglass, resin, and compounds.</li>
+                        <li>Recreating the original shape of the vessel with fairing.</li>
+                        <li>Applying new protective coating over the repair area.</li>
+                    </ol>
+                </div>
                 </article>
               </section>
 
               <div class="carousel">
-                <h2>Carousel Example</h2>  
+                <h2>Boat Repair 2</h2>  
                 <div id="myCarousel2" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
                   <ol class="carousel-indicators">
@@ -144,6 +154,23 @@
                   </a>
                 </div>
               </div>
+              <figure>
+                <div class="container logobox">
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Aviara Repair shop.svg" alt="Aviara Repair shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Azimut Yacht Repairs.png" alt="Azimut Yacht Repairs"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Barletta Boat Repair.jpg" alt="Barletta Boat Repair"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Bertram Repair Shop.jpg" alt="Bertram Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Bayliner repair shop.gif" alt="Bayliner repair shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Bennington Repair Shop.png" alt="Bennington Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Centurion Boat Repair Shop.png" alt="Centurion Boat Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Chaparral Repair shop.gif" alt="Chaparral Repair shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Chris Craft Repair Shop.jpg" alt="Chris Craft Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Cobalt Boar Repair Shop.png" alt="Cobalt Boar Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Cruisers Yachts Repair Shop.png" alt="Cruisers Yachts Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/grady white boat repair.png" alt="Grady White Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Sabre Yacht Repair Service.png" alt="Sabre Repair Shop"></div>
+                </div>
+              </figure>
               
         </main>
 
