--- a/boatrepair.html
+++ b/boatrepair.html
@@ -156,8 +156,8 @@
               </div>
               <figure>
                 <div class="container logobox">
-                    <div class="container imgblock"><img src="resources/images/boatbrands/Aviara Repair shop.svg" alt="Aviara Repair shop"></div>
-                    <div class="container imgblock"><img src="resources/images/boatbrands/Azimut Yacht Repairs.png" alt="Azimut Yacht Repairs"></div>
+                    <div class="container imgblock"><a href="https://www.aviaraboats.com/#av28" target="_blank"><img src="resources/images/boatbrands/Aviara Repair shop.svg" alt="Aviara Repair shop"></a></div>
+                    <div class="container imgblock"><a href="" target="_blank"></a><img src="resources/images/boatbrands/Azimut Yacht Repairs.png" alt="Azimut Yacht Repairs"></div>
                     <div class="container imgblock"><img src="resources/images/boatbrands/Barletta Boat Repair.jpg" alt="Barletta Boat Repair"></div>
                     <div class="container imgblock"><img src="resources/images/boatbrands/Bertram Repair Shop.jpg" alt="Bertram Repair Shop"></div>
                     <div class="container imgblock"><img src="resources/images/boatbrands/Bayliner repair shop.gif" alt="Bayliner repair shop"></div>
@@ -167,8 +167,11 @@
                     <div class="container imgblock"><img src="resources/images/boatbrands/Chris Craft Repair Shop.jpg" alt="Chris Craft Repair Shop"></div>
                     <div class="container imgblock"><img src="resources/images/boatbrands/Cobalt Boar Repair Shop.png" alt="Cobalt Boar Repair Shop"></div>
                     <div class="container imgblock"><img src="resources/images/boatbrands/Cruisers Yachts Repair Shop.png" alt="Cruisers Yachts Repair Shop"></div>
-                    <div class="container imgblock"><img src="resources/images/boatbrands/grady white boat repair.png" alt="Grady White Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/grady white boat repair shop.png" alt="Grady White Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Kawasaki Repair Shop.jpg" alt="Kawasaki Repair Shop"></div>
                     <div class="container imgblock"><img src="resources/images/boatbrands/Sabre Yacht Repair Service.png" alt="Sabre Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Sea Ray Repair Shop.png" alt="Sea Ray Repair Shop"></div>
+                    <div class="container imgblock"><img src="resources/images/boatbrands/Yamaha Repair Shop.jpg" alt="Yamaha Repair Shop"></div>
                 </div>
               </figure>
               
