--- a/boatrepair.html
+++ b/boatrepair.html
@@ -163,42 +163,57 @@
                     <div class="paragraph">
                       <p>While there are some general steps that are part of every repair processes, the execution of those steps vary for every repair. The repair process must be adapted for variences in:
                         <ul>
-                          <li>Structure material: </li>
-                          <li>Protective Coating:</li>
-                          <li>Weather:</li>
-                          <li>Part of vessel:</li>
-                          <li>Locaiton of repair:</li>
+                          <li><b>Core material:</b> Some boat parts are made of solid fiberglass; others have lightweight composite cores. There are different types of resins used in boat construction includin: polyester resins, vinylester resins, and epoxy resins
+                                  Many different types of fiberglass cloths are used in boat construction including: mat, roving, stichmats, and tapes. In addition to cloths,  additives and fillers mixed with resins are used in boa construciton. Common additives and fillers
+                                  include: thixotrophic powder, glass bubbles, milled fiberglass fiber, chopped strand fiberglass, wood flour, pigments, polyester surfacing agent, and mold release wax. Carbon fiber cloth is becoming increasingly common in the boat construction industry
+                                  adding a new high-strength, high-price, category of core material.</li>
+                          <li><b>Protective Coating:</b> Marine core material isn't waterproof, it's water resistant. Uncoated core materials will absorb moisture and deteriorate over time if not properly protected. 
+                                  The amount of protective marine coatings on the market constantly increase as manufacturers develop new paints and coatings for specialty purposes. There are 2 types of protective marine coatings: paint and gelcoat. Popular marine paint brands include:
+                                  Interlux, Petite, Bluewater, Totalboat, Rust-Oleum, Imron, Kirbypaint, and Alexseal. Popular gelcoat manufacturers include: Totalboat, Evercoat, HKResearch, Minicraft, and Riteks. See my gelcoat and boat painting pages for more information about these protective coatings.</li>
+                          <li><b>Weather:</b> Most boat building and repair products cure well in a dry environment with the temperatures between 60 - 80 degrees Farenheight. Contact with moisture or extreme temperature will reduce product curing, strength, and visual appeal.
+                                  Maryland has a temperate decidious forest climate. It can be difficult to schedule and perform boat repairs in Maryland due to low temperatures in the winter, hot temperatures in the summer, substantial amount of rainfall, and humidity from the ocean, Chesapeake Bay, rivers, and vegetation.
+                                  It can be difficult to perform a high quality repair in Maryland due to the tendancy of humidity to reach 100% at night, creating dew that coats everything with water. Most boat building materials recommend no contact with water during the curing process.
+                          <li><b>Part of vessel:</b> The topsides of boats are built differently than the hulls. Boat bottoms are usually built out of solid fiberglass and resin while topsides often use lightweight porous core material. Topside core material can absorb moisture that leaks in through damaged areas or uncaulked screw holes.
+                                  Moisture must be completely removed from the core material before the water deteriorates the structure from the inside. Hulls must have proper drainage and ventilation to prevent moisture buildup and deterioration. Different protecitve coatings are used below the waterline than above it.
+                                  Topside protective coatings include gelcoat, urethane paints, and polyester paints. Bottom protective coatings inlude: Epoxy primers, epoxy paints, barrier coats, hard bottom paints, and ablative bottom paints.</li>
+                          <li><b>Location of vessel:</b> It's important to consider the geographic location of a vessel in preparation for performing a repair. In Maryland, the chances of dew coating the boat in water at night increase closer to the water. Curing repair materials is more problematic for boats sitting in the water
+                                  or in low-lying areas near the water such as Kent Island, St.Micheals, and Annapolis. I know from experience that boats located in low-lying areas near the bay are likely to get covered in moisture during warm summer months. Transporting a boat inland or placing the boat in an enclosed building
+                                  will reduce the chances of moisture interfering with curing of repair products.</li>
 
                         </ul>
                     </div>
                   </article>
                 </section>
 
-              <figure>
-                <div class="container logobox">
-                    <div class="container imgblock"><a href="https://www.aviaraboats.com/#av28" target="_blank"><img src="resources/images/boatbrands/Aviara Repair shop.svg" alt="Aviara Repair shop"></a></div>
-                    <div class="container imgblock"><a href="https://azimutyachts.com/en/" target="_blank"><img src="resources/images/boatbrands/Azimut Yacht Repairs.png" alt="Azimut Yacht Repairs"></a></div>
-                    <div class="container imgblock"><a href="https://www.barlettapontoonboats.com/" target="_blank"><img src="resources/images/boatbrands/Barletta Boat Repair.jpg" alt="Barletta Boat Repair"></a></div>
-                    <div class="container imgblock"><a href="https://bertram.com/" target="_blank"><img src="resources/images/boatbrands/Bertram Repair Shop.jpg" alt="Bertram Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.bayliner.com/" target="_blank"><img src="resources/images/boatbrands/Bayliner repair shop.gif" alt="Bayliner repair shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.benningtonmarine.com/en-us/" target="_blank"><img src="resources/images/boatbrands/Bennington Repair Shop.png" alt="Bennington Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://centurionboats.com/" target="_blank"><img src="resources/images/boatbrands/Centurion Boat Repair Shop.png" alt="Centurion Boat Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.chaparralboats.com/Chaparral-Boats.php" target="_blank"><img src="resources/images/boatbrands/Chaparral Repair shop.gif" alt="Chaparral Repair shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.chriscraft.com/" target="_blank"><img src="resources/images/boatbrands/Chris Craft Repair Shop.jpg" alt="Chris Craft Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://cobaltboats.com/" target="_blank"><img src="resources/images/boatbrands/Cobalt Boar Repair Shop.png" alt="Cobalt Boar Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.cruisersyachts.com/?gclid=Cj0KCQiAnfmsBhDfARIsAM7MKi1V0kdA1ANwPLjdJF8gIOCg-SxP1Veu9Mg_p6-y6NNX9tQQXKye7sIaAhooEALw_wcB" target="_blank"><img src="resources/images/boatbrands/Cruisers Yachts Repair Shop.png" alt="Cruisers Yachts Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.gradywhite.com/" target="_blank"><img src="resources/images/boatbrands/grady white boat repair shop.png" alt="Grady White Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.kawasaki.com/en-us/" target="_blank"><img src="resources/images/boatbrands/Kawasaki Repair Shop.jpg" alt="Kawasaki Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.sabreyachts.com/" target="_blank"><img src="resources/images/boatbrands/Sabre Yacht Repair Service.png" alt="Sabre Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.searay.com/us/en.html" target="_blank"><img src="resources/images/boatbrands/Sea Ray Repair Shop.png" alt="Sea Ray Repair Shop"></a></div>
-                    <div class="container imgblock"><a href="https://www.yamahaboats.com/" target="_blank"><img src="resources/images/boatbrands/Yamaha Repair Shop.jpg" alt="Yamaha Repair Shop"></a></div>
-                </div>
-              </figure>
+                <section class="imgbox">
+                  <h4>Boat Brands Repaired</h4>
+                  <figure>
+                    <div class="container logobox">
+                        <div class="container imgblock"><a href="https://www.aviaraboats.com/#av28" target="_blank"><img src="resources/images/boatbrands/Aviara Repair shop.svg" alt="Aviara Repair shop"></a></div>
+                        <div class="container imgblock"><a href="https://azimutyachts.com/en/" target="_blank"><img src="resources/images/boatbrands/Azimut Yacht Repairs.png" alt="Azimut Yacht Repairs"></a></div>
+                        <div class="container imgblock"><a href="https://www.barlettapontoonboats.com/" target="_blank"><img src="resources/images/boatbrands/Barletta Boat Repair.jpg" alt="Barletta Boat Repair"></a></div>
+                        <div class="container imgblock"><a href="https://bertram.com/" target="_blank"><img src="resources/images/boatbrands/Bertram Repair Shop.jpg" alt="Bertram Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.bayliner.com/" target="_blank"><img src="resources/images/boatbrands/Bayliner repair shop.gif" alt="Bayliner repair shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.benningtonmarine.com/en-us/" target="_blank"><img src="resources/images/boatbrands/Bennington Repair Shop.png" alt="Bennington Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://centurionboats.com/" target="_blank"><img src="resources/images/boatbrands/Centurion Boat Repair Shop.png" alt="Centurion Boat Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.chaparralboats.com/Chaparral-Boats.php" target="_blank"><img src="resources/images/boatbrands/Chaparral Repair shop.gif" alt="Chaparral Repair shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.chriscraft.com/" target="_blank"><img src="resources/images/boatbrands/Chris Craft Repair Shop.jpg" alt="Chris Craft Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://cobaltboats.com/" target="_blank"><img src="resources/images/boatbrands/Cobalt Boar Repair Shop.png" alt="Cobalt Boar Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.cruisersyachts.com/?gclid=Cj0KCQiAnfmsBhDfARIsAM7MKi1V0kdA1ANwPLjdJF8gIOCg-SxP1Veu9Mg_p6-y6NNX9tQQXKye7sIaAhooEALw_wcB" target="_blank"><img src="resources/images/boatbrands/Cruisers Yachts Repair Shop.png" alt="Cruisers Yachts Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.gradywhite.com/" target="_blank"><img src="resources/images/boatbrands/grady white boat repair shop.png" alt="Grady White Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.kawasaki.com/en-us/" target="_blank"><img src="resources/images/boatbrands/Kawasaki Repair Shop.jpg" alt="Kawasaki Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.sabreyachts.com/" target="_blank"><img src="resources/images/boatbrands/Sabre Yacht Repair Service.png" alt="Sabre Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.searay.com/us/en.html" target="_blank"><img src="resources/images/boatbrands/Sea Ray Repair Shop.png" alt="Sea Ray Repair Shop"></a></div>
+                        <div class="container imgblock"><a href="https://www.yamahaboats.com/" target="_blank"><img src="resources/images/boatbrands/Yamaha Repair Shop.jpg" alt="Yamaha Repair Shop"></a></div>
+                    </div>
+                  </figure>
+                </section>
               
         </main>
 
         <footer class=" footer container">
             <div class="contact">
+                <br>
                 <img src="resources/images/Nicks Boat Work Logo.png" alt="marine consultant">
                 <br>
                 <br>
@@ -208,6 +223,7 @@
                 <br>
                 <p>3 Dickerson Street</p>
                 <p>Harrington, DE 19952</p>
+                <br>
             </div>
         </footer>
     </body>
