--- a/boatrepair.html
+++ b/boatrepair.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="resources/style.css" rel="stylesheet">
+    <link href="resources/linked/style.css" rel="stylesheet">
     <title>Nicks Boat Work</title>
 </head>
     <body>
@@ -64,7 +64,6 @@
         
 
           <main>
-
             <section class="pagesection">
               <div class="carousel">
                   <h2>A Perfect Repair</h2>
