--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <div id="nav-link-container">
                     <ul>
                         <li><a href="boatrepair.html" class="nav-link">Boat Repair</a></li>
-                        <li><a href="#" class="nav-link">Painting</a></li>
-                        <li><a href="#" class="nav-link">Fiberglass</a></li>
-                        <li><a href="#" class="nav-link">Gelcoat</a></li>
-                        <li><a href="#" class="nav-link">Brightwork</a></li>
-                        <li><a href="#" class="nav-link">Consulting</a></li>
+                        <li><a href="boatpainting.html" class="nav-link">Painting</a></li>
+                        <li><a href="fiberglassrepair.html" class="nav-link">Fiberglass</a></li>
+                        <li><a href="gelcoatrepair.html" class="nav-link">Gelcoat</a></li>
+                        <li><a href="brightwork.html" class="nav-link">Brightwork</a></li>
+                        <li><a href="marineconsultant.html" class="nav-link">Consulting</a></li>
                     </ul>
                 </div>
             </div>
@@ -28,12 +28,12 @@
             <div class="dropdown" onclick="toggleDropdown()">
                 <button class="dropbtn">Menu</button>
                 <div class="dropdown-content">
-                  <a href="#link1">Repairs</a>
-                  <a href="#link2">Boat Painting</a>
-                  <a href="#link3">Fiberglass</a>
-                  <a href="#link3">Gelcoat</a>
-                  <a href="#link3">Brightwork</a>
-                  <a href="#link3">Consulting</a>
+                    <a href="boatrepair.html">Repairs</a>
+                    <a href="boatpainting.html">Boat Painting</a>
+                    <a href="fiberglassrepair.html">Fiberglass</a>
+                    <a href="gelcoatrepair.html">Gelcoat</a>
+                    <a href="brightwork.html">Brightwork</a>
+                    <a href="marineconsultant.html">Consulting</a>
                 </div>
             </div>
         </nav>
